--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-BOT_TOKEN=123456:ABC-DEF1234ghIkl-zyx57W2v1u123ew11
+BOT_TOKEN=8364503275:AAGJYgtg3cdAFQsOzm3J18GYKumACCxT_ao
 CHANNEL_ID=@promo_med_channel   # ← именно в формате @username
 GOOGLE_CREDS_PATH=./creds/service-account.json
 GUIDE_PATH=./data/guide.pdf
