--- a/handlers/.env_example
+++ b/handlers/.env_example
@@ -1,4 +1,4 @@
-BOT_TOKEN=<"токен бота"> 
-CHANNEL_ID=<'@название бота'>
+BOT_TOKEN=8364503275:AAGJYgtg3cdAFQsOzm3J18GYKumACCxT_ao 
+CHANNEL_ID=@dr_halimova_gulnaz
 GUIDE_PATH=./data/guide.pdf
-ADMIN_IDS=41243145, 1453246 (ID администраторов бота)
+ADMIN_IDS=41243145, 1453246 
